# bf

./: .gitignore  Makefile.am  README.md  bf2c.c  bfi.c  configure.ac  gobfi.go  readfile.c
docs/: c-license-header.h  license-header.txt
